# web_blog

./: .gitignore  pyproject.toml
tests/: test_db_client_factory.py  test_web_blog.py
web_blog/: app.py
web_blog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web_blog/common/: constants.py  db_client_factory.py  mongo_dao.py
web_blog/models/: blog.py  post.py  user.py
web_blog/static/css/: main.css
web_blog/templates/: base.html  login.html  new_blog.html  new_post.html  posts.html  profile.html  register.html  user_blogs.html
