[tool.poetry]
name = "web_blog"
version = "0.1.0"
description = ""
authors = ["Anthony <azelinsky1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pymongo = "^3.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
app = "web_blog.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

